--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -40,14 +40,20 @@ body {
     }
 
     input {
-        @apply text-ms-dark border-0 border-b focus:outline-none focus:border-2 border-primary;
+        @apply border-0 border-b;
+    }
+
+    textarea {
+        @apply border;
+    }
+
+    input,
+    textarea {
+        @apply text-ms-dark  focus:outline-none focus:border-2 focus:border-primary border-primary;
     }
 
     .error {
         @apply text-xs text-red-500;
-    }
-    textarea {
-        @apply text-ms-dark;
     }
 
     &:not(:first-child) {
@@ -400,7 +406,7 @@ main.mrsmart-parent {
 
 /** FOOTER **/
 .footer {
-    @apply bg-primary w-full py-20 mt-auto flex flex-col-reverse gap-y-10 md:gap-0 items-center md:items-start md:flex-row justify-between;
+    @apply bg-primary w-full py-14 mt-auto flex flex-col-reverse gap-y-10 md:gap-0 items-center md:items-start md:flex-row justify-between;
 
     .brand {
         &-logo {
@@ -437,7 +443,7 @@ main.mrsmart-parent {
 
     .quick-links,
     .contact {
-        @apply flex flex-col gap-y-2;
+        @apply flex flex-col items-center sm:items-start gap-y-2;
 
         p {
             @apply font-bold text-white text-base lg:text-xl mb-2;
@@ -447,12 +453,7 @@ main.mrsmart-parent {
             @apply text-secondary text-sm lg:text-base;
 
             &.quick-link {
-                @apply font-semibold;
-
-                &::before {
-                    content: "\2022";
-                    @apply mr-2;
-                }
+                @apply font-semibold before:sm:content-["\2022"] before:sm:mr-2;
             }
 
             &.contact-link {
@@ -476,14 +477,14 @@ main.mrsmart-parent {
 /** HERO SECTION **/
 
 section.hero {
-    @apply relative overflow-hidden h-[85vh] sm:h-[65vh] lg:h-[95vh];
+    @apply relative overflow-hidden h-[85vh] sm:h-[60vh] lg:h-[95vh];
 
     img {
         @apply absolute -bottom-14 object-cover  left-0 w-full h-full scale-x-[-1] -z-10;
     }
 
     .hero-content {
-        @apply absolute bottom-0 h-full left-0 w-full mt-auto z-10  flex flex-col justify-end pb-36 md:pb-16 lg:pb-32 bg-gradient-to-t from-[#111111]/50 via-transparent to-transparent;
+        @apply absolute bottom-0 h-full left-0 w-full mt-auto z-10  flex flex-col justify-end pb-40 md:pb-24 lg:pb-32 bg-gradient-to-t from-[#111111]/50 via-transparent to-transparent;
 
         .welcome-container {
             span.welcome {
@@ -508,7 +509,7 @@ section.info-container {
     @apply bg-ms-light z-20 relative flex mb-14 justify-center;
 
     .info {
-        @apply absolute w-11/12 sm:w-10/12 lg:w-10/12 flex sm:flex-row flex-col -top-28 sm:-top-[44px] lg:-top-16 justify-between rounded-2xl bg-primary px-8 lg:px-12 py-8 sm:py-6 lg:py-8 shadow-md gap-5 sm:gap-10 lg:gap-20;
+        @apply absolute w-11/12 sm:w-10/12 lg:w-10/12 flex sm:flex-row flex-col -top-32 sm:-top-[44px] lg:-top-16 justify-between rounded-2xl bg-primary px-8 lg:px-12 py-8 sm:py-6 lg:py-8 shadow-md gap-8 sm:gap-10 lg:gap-20;
 
         .info-item {
             @apply flex  items-center gap-5 sm:gap-3 lg:gap-5 w-full sm:w-1/3;
@@ -535,16 +536,16 @@ section.info-container {
 
 /** SERVICES SECTION **/
 section.services {
-    @apply pb-16 pt-20 sm:py-24 bg-ms-light flex flex-col gap-5 sm:gap-0 sm:flex-row justify-between;
+    @apply pb-16 pt-20 lg:py-24 bg-ms-light flex flex-col gap-5 sm:gap-0 sm:flex-row justify-between;
 
     .service-description {
         @apply w-full sm:w-1/2  sm:pr-4 lg:pr-10;
         h1 {
-            @apply text-primary text-4xl font-bold;
+            @apply text-primary text-3xl lg:text-4xl font-bold;
         }
 
         p {
-            @apply text-ms-dark text-xl my-1;
+            @apply text-ms-dark text-base lg:text-xl my-1;
         }
 
         .image-container {
@@ -589,17 +590,14 @@ section.contact {
         @apply w-full lg:w-1/2;
 
         .info-header {
-            @apply h-1/3 flex flex-row lg:flex-col items-center lg:items-start justify-between lg:justify-start bg-primary py-14 lg:py-20 pl-5 md:px-10 lg:pl-32;
+            @apply h-1/3 flex items-center gap-2 justify-start bg-primary py-10 lg:py-20 pl-5 md:px-10 lg:pl-32;
 
             h1 {
                 @apply text-white text-2xl lg:text-4xl font-bold;
             }
 
-            p {
-                @apply text-white text-xl flex gap-2 items-center mt-2;
-                img {
-                    @apply h-10 rotate-90 lg:rotate-0;
-                }
+            img {
+                @apply h-6 md:h-10 rotate-90 lg:rotate-0;
             }
         }
 
@@ -609,10 +607,10 @@ section.contact {
     }
 
     form {
-        @apply w-full lg:w-1/2 px-10 py-14 sm:p-20 bg-white lg:pr-32;
+        @apply w-full lg:w-1/2 px-5 py-14 sm:p-20 bg-white lg:pr-32;
 
         button {
-            @apply mt-5 w-full px-8 py-5 lg:py-3 font-semibold uppercase bg-primary hover:shadow-accent/50 hover:shadow-md text-white;
+            @apply mt-5 w-full px-8 py-4 lg:py-3 font-semibold uppercase bg-primary hover:shadow-accent/50 hover:shadow-md text-white;
         }
     }
 }
