--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -2,7 +2,9 @@
 @import "tailwindcss/components";
 @import "tailwindcss/utilities";
 
-@import url("https://fonts.googleapis.com/css2?family=Inter&family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap");
+@import "~@fontsource/open-sans/index.css";
+@import "~@fontsource/open-sans/600.css";
+@import "~@fontsource/open-sans/700.css";
 
 html {
     height: 100%;
