--- a/public/css/app.css
+++ b/public/css/app.css
@@ -16,61 +16,6 @@
   src: url(/fonts/vendor/@fontsource/open-sans/files/open-sans-cyrillic-400-normal.woff2?8c8b009e2308cfd366740eca4d4eafa6) format('woff2'), url(/fonts/vendor/@fontsource/open-sans/files/open-sans-all-400-normal.woff?fd1a30188fbba33c197111853f7de9ab) format('woff');
   unicode-range: U+0400-045F, U+0490-0491, U+04B0-04B1, U+2116;
 }
-/* open-sans-greek-ext-400-normal*/
-@font-face {
-  font-family: 'Open Sans';
-  font-style: normal;
-  font-display: swap;
-  font-weight: 400;
-  src: url(/fonts/vendor/@fontsource/open-sans/files/open-sans-greek-ext-400-normal.woff2?7f0c7c378a3ca829b189ee3da6e71b77) format('woff2'), url(/fonts/vendor/@fontsource/open-sans/files/open-sans-all-400-normal.woff?fd1a30188fbba33c197111853f7de9ab) format('woff');
-  unicode-range: U+1F00-1FFF;
-}
-/* open-sans-greek-400-normal*/
-@font-face {
-  font-family: 'Open Sans';
-  font-style: normal;
-  font-display: swap;
-  font-weight: 400;
-  src: url(/fonts/vendor/@fontsource/open-sans/files/open-sans-greek-400-normal.woff2?f4df5aa87d97ffdd65c4f781b12ede75) format('woff2'), url(/fonts/vendor/@fontsource/open-sans/files/open-sans-all-400-normal.woff?fd1a30188fbba33c197111853f7de9ab) format('woff');
-  unicode-range: U+0370-03FF;
-}
-/* open-sans-hebrew-400-normal*/
-@font-face {
-  font-family: 'Open Sans';
-  font-style: normal;
-  font-display: swap;
-  font-weight: 400;
-  src: url(/fonts/vendor/@fontsource/open-sans/files/open-sans-hebrew-400-normal.woff2?abf447351bfd65fe2d5d3335a17d4d7b) format('woff2'), url(/fonts/vendor/@fontsource/open-sans/files/open-sans-all-400-normal.woff?fd1a30188fbba33c197111853f7de9ab) format('woff');
-  unicode-range: U+0590-05FF, U+200C-2010, U+20AA, U+25CC, U+FB1D-FB4F;
-}
-/* open-sans-vietnamese-400-normal*/
-@font-face {
-  font-family: 'Open Sans';
-  font-style: normal;
-  font-display: swap;
-  font-weight: 400;
-  src: url(/fonts/vendor/@fontsource/open-sans/files/open-sans-vietnamese-400-normal.woff2?1970138327ca2599f2c594e090d41ee2) format('woff2'), url(/fonts/vendor/@fontsource/open-sans/files/open-sans-all-400-normal.woff?fd1a30188fbba33c197111853f7de9ab) format('woff');
-  unicode-range: U+0102-0103, U+0110-0111, U+0128-0129, U+0168-0169, U+01A0-01A1, U+01AF-01B0, U+1EA0-1EF9, U+20AB;
-}
-/* open-sans-latin-ext-400-normal*/
-@font-face {
-  font-family: 'Open Sans';
-  font-style: normal;
-  font-display: swap;
-  font-weight: 400;
-  src: url(/fonts/vendor/@fontsource/open-sans/files/open-sans-latin-ext-400-normal.woff2?0950a0dbc206706736db7e470e257e77) format('woff2'), url(/fonts/vendor/@fontsource/open-sans/files/open-sans-all-400-normal.woff?fd1a30188fbba33c197111853f7de9ab) format('woff');
-  unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
-}
-/* open-sans-latin-400-normal*/
-@font-face {
-  font-family: 'Open Sans';
-  font-style: normal;
-  font-display: swap;
-  font-weight: 400;
-  src: url(/fonts/vendor/@fontsource/open-sans/files/open-sans-latin-400-normal.woff2?a2d02404d087c7c068d4266172a0933d) format('woff2'), url(/fonts/vendor/@fontsource/open-sans/files/open-sans-all-400-normal.woff?fd1a30188fbba33c197111853f7de9ab) format('woff');
-  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
-}
-
 /* open-sans-cyrillic-ext-600-normal*/
 @font-face {
   font-family: 'Open Sans';
@@ -88,60 +33,6 @@
   font-weight: 600;
   src: url(/fonts/vendor/@fontsource/open-sans/files/open-sans-cyrillic-600-normal.woff2?01c4890f27c6469c81a8b5a210acec60) format('woff2'), url(/fonts/vendor/@fontsource/open-sans/files/open-sans-all-600-normal.woff?3c307d7857602d8ab49dd0e40d29d6d0) format('woff');
   unicode-range: U+0400-045F, U+0490-0491, U+04B0-04B1, U+2116;
-}
-/* open-sans-greek-ext-600-normal*/
-@font-face {
-  font-family: 'Open Sans';
-  font-style: normal;
-  font-display: swap;
-  font-weight: 600;
-  src: url(/fonts/vendor/@fontsource/open-sans/files/open-sans-greek-ext-600-normal.woff2?050f4e3259b272671ab679801132caf5) format('woff2'), url(/fonts/vendor/@fontsource/open-sans/files/open-sans-all-600-normal.woff?3c307d7857602d8ab49dd0e40d29d6d0) format('woff');
-  unicode-range: U+1F00-1FFF;
-}
-/* open-sans-greek-600-normal*/
-@font-face {
-  font-family: 'Open Sans';
-  font-style: normal;
-  font-display: swap;
-  font-weight: 600;
-  src: url(/fonts/vendor/@fontsource/open-sans/files/open-sans-greek-600-normal.woff2?387efc3da55d512002ee2baf62c7f8af) format('woff2'), url(/fonts/vendor/@fontsource/open-sans/files/open-sans-all-600-normal.woff?3c307d7857602d8ab49dd0e40d29d6d0) format('woff');
-  unicode-range: U+0370-03FF;
-}
-/* open-sans-hebrew-600-normal*/
-@font-face {
-  font-family: 'Open Sans';
-  font-style: normal;
-  font-display: swap;
-  font-weight: 600;
-  src: url(/fonts/vendor/@fontsource/open-sans/files/open-sans-hebrew-600-normal.woff2?c6e5751e4980ddb179d6f654772c54b9) format('woff2'), url(/fonts/vendor/@fontsource/open-sans/files/open-sans-all-600-normal.woff?3c307d7857602d8ab49dd0e40d29d6d0) format('woff');
-  unicode-range: U+0590-05FF, U+200C-2010, U+20AA, U+25CC, U+FB1D-FB4F;
-}
-/* open-sans-vietnamese-600-normal*/
-@font-face {
-  font-family: 'Open Sans';
-  font-style: normal;
-  font-display: swap;
-  font-weight: 600;
-  src: url(/fonts/vendor/@fontsource/open-sans/files/open-sans-vietnamese-600-normal.woff2?59033dc3858d3b240ccad4c600655068) format('woff2'), url(/fonts/vendor/@fontsource/open-sans/files/open-sans-all-600-normal.woff?3c307d7857602d8ab49dd0e40d29d6d0) format('woff');
-  unicode-range: U+0102-0103, U+0110-0111, U+0128-0129, U+0168-0169, U+01A0-01A1, U+01AF-01B0, U+1EA0-1EF9, U+20AB;
-}
-/* open-sans-latin-ext-600-normal*/
-@font-face {
-  font-family: 'Open Sans';
-  font-style: normal;
-  font-display: swap;
-  font-weight: 600;
-  src: url(/fonts/vendor/@fontsource/open-sans/files/open-sans-latin-ext-600-normal.woff2?64747c633322cd7d25afb1585fdcabba) format('woff2'), url(/fonts/vendor/@fontsource/open-sans/files/open-sans-all-600-normal.woff?3c307d7857602d8ab49dd0e40d29d6d0) format('woff');
-  unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
-}
-/* open-sans-latin-600-normal*/
-@font-face {
-  font-family: 'Open Sans';
-  font-style: normal;
-  font-display: swap;
-  font-weight: 600;
-  src: url(/fonts/vendor/@fontsource/open-sans/files/open-sans-latin-600-normal.woff2?87da65d8301dc2218555c9c0a9bb3f49) format('woff2'), url(/fonts/vendor/@fontsource/open-sans/files/open-sans-all-600-normal.woff?3c307d7857602d8ab49dd0e40d29d6d0) format('woff');
-  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 
 /* open-sans-cyrillic-ext-700-normal*/
@@ -162,60 +53,8 @@
   src: url(/fonts/vendor/@fontsource/open-sans/files/open-sans-cyrillic-700-normal.woff2?1c275ed85d097d423a5ab4fd32d23f51) format('woff2'), url(/fonts/vendor/@fontsource/open-sans/files/open-sans-all-700-normal.woff?3499b9716301bd3c513c34b7c1e26c32) format('woff');
   unicode-range: U+0400-045F, U+0490-0491, U+04B0-04B1, U+2116;
 }
-/* open-sans-greek-ext-700-normal*/
-@font-face {
-  font-family: 'Open Sans';
-  font-style: normal;
-  font-display: swap;
-  font-weight: 700;
-  src: url(/fonts/vendor/@fontsource/open-sans/files/open-sans-greek-ext-700-normal.woff2?6ec764fe61947b88ec492fcd266b2ee6) format('woff2'), url(/fonts/vendor/@fontsource/open-sans/files/open-sans-all-700-normal.woff?3499b9716301bd3c513c34b7c1e26c32) format('woff');
-  unicode-range: U+1F00-1FFF;
-}
-/* open-sans-greek-700-normal*/
-@font-face {
-  font-family: 'Open Sans';
-  font-style: normal;
-  font-display: swap;
-  font-weight: 700;
-  src: url(/fonts/vendor/@fontsource/open-sans/files/open-sans-greek-700-normal.woff2?8fe2fcd1cc0060a5abe80195f1403dfe) format('woff2'), url(/fonts/vendor/@fontsource/open-sans/files/open-sans-all-700-normal.woff?3499b9716301bd3c513c34b7c1e26c32) format('woff');
-  unicode-range: U+0370-03FF;
-}
-/* open-sans-hebrew-700-normal*/
-@font-face {
-  font-family: 'Open Sans';
-  font-style: normal;
-  font-display: swap;
-  font-weight: 700;
-  src: url(/fonts/vendor/@fontsource/open-sans/files/open-sans-hebrew-700-normal.woff2?5b6a72dd649c1ba5dd576d718a537648) format('woff2'), url(/fonts/vendor/@fontsource/open-sans/files/open-sans-all-700-normal.woff?3499b9716301bd3c513c34b7c1e26c32) format('woff');
-  unicode-range: U+0590-05FF, U+200C-2010, U+20AA, U+25CC, U+FB1D-FB4F;
-}
-/* open-sans-vietnamese-700-normal*/
-@font-face {
-  font-family: 'Open Sans';
-  font-style: normal;
-  font-display: swap;
-  font-weight: 700;
-  src: url(/fonts/vendor/@fontsource/open-sans/files/open-sans-vietnamese-700-normal.woff2?f7029b9ddd8d28129255f2c98292f89c) format('woff2'), url(/fonts/vendor/@fontsource/open-sans/files/open-sans-all-700-normal.woff?3499b9716301bd3c513c34b7c1e26c32) format('woff');
-  unicode-range: U+0102-0103, U+0110-0111, U+0128-0129, U+0168-0169, U+01A0-01A1, U+01AF-01B0, U+1EA0-1EF9, U+20AB;
-}
-/* open-sans-latin-ext-700-normal*/
-@font-face {
-  font-family: 'Open Sans';
-  font-style: normal;
-  font-display: swap;
-  font-weight: 700;
-  src: url(/fonts/vendor/@fontsource/open-sans/files/open-sans-latin-ext-700-normal.woff2?45e8e1ac313ddc44a97304a523fcd9a8) format('woff2'), url(/fonts/vendor/@fontsource/open-sans/files/open-sans-all-700-normal.woff?3499b9716301bd3c513c34b7c1e26c32) format('woff');
-  unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
-}
-/* open-sans-latin-700-normal*/
-@font-face {
-  font-family: 'Open Sans';
-  font-style: normal;
-  font-display: swap;
-  font-weight: 700;
-  src: url(/fonts/vendor/@fontsource/open-sans/files/open-sans-latin-700-normal.woff2?166dc5efb248e57520964b354e0b38bb) format('woff2'), url(/fonts/vendor/@fontsource/open-sans/files/open-sans-all-700-normal.woff?3499b9716301bd3c513c34b7c1e26c32) format('woff');
-  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
-}
+
+
 
 @charset "UTF-8";
 /*
@@ -3292,11 +3131,11 @@ section.services .service-list .service:hover{
     padding: 1.25rem;
   }
 }
-section.services .service-list .service img{
+section.services .service-list .service svg{
   height: 2.5rem;
 }
 @media (min-width: 1024px){
-  section.services .service-list .service img{
+  section.services .service-list .service svg{
     height: 3.5rem;
   }
 }
@@ -3332,7 +3171,7 @@ section.services .service-list .service .service-info span{
     line-height: 1.5rem;
   }
 }
-section.services .service-list .service .service-info span img{
+section.services .service-list .service .service-info span svg{
   height: 1.25rem;
 }
 
@@ -3396,18 +3235,18 @@ section.contact .contact-info .info-header h1{
     line-height: 2.5rem;
   }
 }
-section.contact .contact-info .info-header img{
+section.contact .contact-info .info-header svg{
   height: 1.5rem;
   --tw-rotate: 90deg;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 @media (min-width: 768px){
-  section.contact .contact-info .info-header img{
+  section.contact .contact-info .info-header svg{
     height: 2.5rem;
   }
 }
 @media (min-width: 1024px){
-  section.contact .contact-info .info-header img{
+  section.contact .contact-info .info-header svg{
     --tw-rotate: 0deg;
     transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
   }
