--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1158,6 +1158,11 @@ select{
   --tw-scale-y: .9;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
+.scale-0{
+  --tw-scale-x: 0;
+  --tw-scale-y: 0;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
 .transform{
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
@@ -1480,6 +1485,9 @@ select{
 .pt-12{
   padding-top: 3rem;
 }
+.pt-20{
+  padding-top: 5rem;
+}
 .pt-8{
   padding-top: 2rem;
 }
@@ -1705,6 +1713,9 @@ select{
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 150ms;
 }
+.delay-150{
+  transition-delay: 150ms;
+}
 .duration-150{
   transition-duration: 150ms;
 }
@@ -1716,6 +1727,9 @@ select{
 }
 .duration-300{
   transition-duration: 300ms;
+}
+.duration-100{
+  transition-duration: 100ms;
 }
 .ease-in-out{
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
@@ -1784,7 +1798,73 @@ body {
   border-radius: 0.5rem;
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-  padding: 2.5rem;
+  padding: 1.25rem;
+  --tw-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color), 0 1px 2px -1px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+.modal-wrapper .modal .settings-modal{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.modal-wrapper .modal .settings-modal .modal-info{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.modal-wrapper .modal .settings-modal .modal-info svg{
+  height: 1.5rem;
+  fill: #3b82f6;
+}
+.modal-wrapper .modal .settings-modal .modal-info p{
+  margin-left: 0.5rem;
+}
+.modal-wrapper .modal .settings-modal .modal-action{
+  display: flex;
+  width: 40%;
+  align-items: center;
+  justify-content: space-between;
+  gap: 0.75rem;
+}
+.modal-wrapper .modal .settings-modal .modal-action button{
+  width: 45%;
+  border-radius: 0.25rem;
+  padding-top: 0.25rem;
+  padding-bottom: 0.25rem;
+  transition-property: color, background-color, border-color, fill, stroke, -webkit-text-decoration-color;
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke;
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, -webkit-text-decoration-color;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 200ms;
+}
+.modal-wrapper .modal .settings-modal .modal-action button:hover{
+  --tw-shadow: 0 1px 2px 0 rgb(0 0 0 / 0.05);
+  --tw-shadow-colored: 0 1px 2px 0 var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+.modal-wrapper .modal .settings-modal .modal-action button.save{
+  --tw-bg-opacity: 1;
+  background-color: rgb(34 197 94 / var(--tw-bg-opacity));
+  font-weight: 600;
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+.modal-wrapper .modal .settings-modal .modal-action button.save:hover{
+  --tw-bg-opacity: 1;
+  background-color: rgb(22 163 74 / var(--tw-bg-opacity));
+}
+.modal-wrapper .modal .settings-modal .modal-action button.discard{
+  --tw-bg-opacity: 1;
+  background-color: rgb(254 226 226 / var(--tw-bg-opacity));
+  --tw-text-opacity: 1;
+  color: rgb(239 68 68 / var(--tw-text-opacity));
+}
+.modal-wrapper .modal .settings-modal .modal-action button.discard:hover{
+  --tw-bg-opacity: 1;
+  background-color: rgb(239 68 68 / var(--tw-bg-opacity));
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
 .input-group{
@@ -2166,45 +2246,28 @@ main.mrsmart-parent{
   --tw-bg-opacity: 1;
   background-color: rgb(15 72 91 / var(--tw-bg-opacity));
 }
-.site-settings-page .settings{
-  display: flex;
-  flex-direction: column;
-  gap: 2.5rem;
-}
-.site-settings-page .settings .mono-settings{
-  display: grid;
-  grid-template-columns: repeat(4, minmax(0, 1fr));
-  gap: 1.25rem;
-}
-.site-settings-page .settings .mono-settings .setting{
-  display: flex;
-  flex-direction: column;
-  gap: 1.25rem;
-}
-.site-settings-page .settings .mono-settings .setting p{
-  padding-left: 0.5rem;
-  padding-right: 0.5rem;
-  padding-top: 0.75rem;
-  padding-bottom: 0.75rem;
-  --tw-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
-  --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color), 0 1px 2px -1px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-.site-settings-page .settings .mono-settings .setting p.name{
+.site-settings-page .setting p.name{
   font-weight: 600;
 }
-.site-settings-page .settings .mono-settings .setting p.value{
+.site-settings-page .setting p.value{
   --tw-text-opacity: 1;
-  color: rgb(75 85 99 / var(--tw-text-opacity));
+  color: rgb(66 66 66 / var(--tw-text-opacity));
 }
-.site-settings-page .settings .mono-settings .setting p.value span{
+.site-settings-page .setting p.value input{
+  width: 100%;
+  border-radius: 0.25rem;
+  border-width: 1px;
+  --tw-border-opacity: 1;
+  border-color: rgb(0 149 135 / var(--tw-border-opacity));
+}
+.site-settings-page .setting p.value span{
   position: relative;
   display: block;
   height: 100%;
   width: 100%;
   cursor: pointer;
 }
-.site-settings-page .settings .mono-settings .setting p.value span::before{
+.site-settings-page .setting p.value span::before{
   position: absolute;
   left: 50%;
   display: none;
@@ -2231,13 +2294,37 @@ main.mrsmart-parent{
   --tw-content: attr(data-field);
   content: var(--tw-content);
 }
-.site-settings-page .settings .mono-settings .setting p.value span:hover::before{
+.site-settings-page .setting p.value span:hover::before{
   top: 0px;
   display: block;
   content: var(--tw-content);
   --tw-scale-x: 1;
   --tw-scale-y: 1;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+.site-settings-page .settings{
+  display: flex;
+  flex-direction: column;
+  gap: 2.5rem;
+}
+.site-settings-page .settings .mono-settings{
+  display: grid;
+  grid-template-columns: repeat(4, minmax(0, 1fr));
+  gap: 1.25rem;
+}
+.site-settings-page .settings .mono-settings .setting{
+  display: flex;
+  flex-direction: column;
+  gap: 1.25rem;
+}
+.site-settings-page .settings .mono-settings .setting p{
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
+  --tw-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color), 0 1px 2px -1px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 .site-settings-page .settings .group-settings{
   display: grid;
@@ -2265,55 +2352,6 @@ main.mrsmart-parent{
   --tw-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color), 0 1px 2px -1px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-.site-settings-page .settings .group-settings .settings-group .setting p.name{
-  font-weight: 600;
-}
-.site-settings-page .settings .group-settings .settings-group .setting p.value{
-  --tw-text-opacity: 1;
-  color: rgb(66 66 66 / var(--tw-text-opacity));
-}
-.site-settings-page .settings .group-settings .settings-group .setting p.value span{
-  position: relative;
-  display: block;
-  height: 100%;
-  width: 100%;
-  cursor: pointer;
-}
-.site-settings-page .settings .group-settings .settings-group .setting p.value span::before{
-  position: absolute;
-  left: 50%;
-  display: none;
-  --tw-translate-x: -50%;
-  --tw-scale-x: 0;
-  --tw-scale-y: 0;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-  --tw-bg-opacity: 1;
-  background-color: rgb(0 149 135 / var(--tw-bg-opacity));
-  padding-top: 0.25rem;
-  padding-bottom: 0.25rem;
-  padding-left: 0.5rem;
-  padding-right: 0.5rem;
-  font-size: 0.75rem;
-  line-height: 1rem;
-  --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity));
-  --tw-shadow: 0 1px 2px 0 rgb(0 0 0 / 0.05);
-  --tw-shadow-colored: 0 1px 2px 0 var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-  transition-property: all;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  transition-duration: 200ms;
-  --tw-content: attr(data-field);
-  content: var(--tw-content);
-}
-.site-settings-page .settings .group-settings .settings-group .setting p.value span:hover::before{
-  top: 0px;
-  display: block;
-  content: var(--tw-content);
-  --tw-scale-x: 1;
-  --tw-scale-y: 1;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
 /** PAGES END **/
