--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1983,12 +1983,12 @@ main.mrsmart-parent{
 .notification-wrapper .notifications .alert-success .message-icon svg{
   fill: #16a34a;
 }
-.notification-wrapper .notifications .alert-danger{
+.notification-wrapper .notifications .alert-danger, .notification-wrapper .notifications .alert-error{
   border-bottom-width: 4px;
   --tw-border-opacity: 1;
   border-color: rgb(220 38 38 / var(--tw-border-opacity));
 }
-.notification-wrapper .notifications .alert-danger .message-icon svg{
+.notification-wrapper .notifications .alert-danger .message-icon svg, .notification-wrapper .notifications .alert-error .message-icon svg{
   fill: #dc2626;
 }
 .notification-wrapper .notifications .alert-warning{
