--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1482,11 +1482,8 @@ select{
 .pb-1{
   padding-bottom: 0.25rem;
 }
-.pt-12{
-  padding-top: 3rem;
-}
-.pt-20{
-  padding-top: 5rem;
+.pt-24{
+  padding-top: 6rem;
 }
 .pt-8{
   padding-top: 2rem;
@@ -2204,16 +2201,17 @@ main.mrsmart-parent{
 }
 .view-message-wrapper .view-message-modal .content{
   margin-top: 0.5rem;
-  border-radius: 0.25rem;
+  width: 80ch;
+  border-radius: 0.125rem;
   border-width: 2px;
-  --tw-border-opacity: 1;
-  border-color: rgb(0 149 135 / var(--tw-border-opacity));
-  padding: 0.25rem;
+  border-color: rgb(0 149 135 / 0.5);
+  padding: 0.75rem;
   --tw-text-opacity: 1;
   color: rgb(66 66 66 / var(--tw-text-opacity));
   --tw-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color), 0 1px 2px -1px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+  -webkit-line-clamp: unset;
 }
 
 .site-settings-page{
