--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1094,11 +1094,11 @@ select{
 .w-10{
   width: 2.5rem;
 }
-.w-20{
-  width: 5rem;
-}
 .w-1\/2{
   width: 50%;
+}
+.w-20{
+  width: 5rem;
 }
 .min-w-0{
   min-width: 0px;
@@ -3203,7 +3203,7 @@ section.services .service-list .service .service-info p{
     line-height: 1.5rem;
   }
 }
-section.services .service-list .service .service-info span{
+section.services .service-list .service .service-info a{
   display: none;
   align-items: center;
   gap: 0.25rem;
@@ -3213,17 +3213,17 @@ section.services .service-list .service .service-info span{
   color: rgb(0 149 135 / var(--tw-text-opacity));
 }
 @media (min-width: 640px){
-  section.services .service-list .service .service-info span{
+  section.services .service-list .service .service-info a{
     display: flex;
   }
 }
 @media (min-width: 1024px){
-  section.services .service-list .service .service-info span{
+  section.services .service-list .service .service-info a{
     font-size: 1rem;
     line-height: 1.5rem;
   }
 }
-section.services .service-list .service .service-info span svg{
+section.services .service-list .service .service-info a svg{
   height: 1.25rem;
 }
 
